--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,4 @@
-#header #img_arrondie {
-	width: 50px;
-    height: 50px;
-    margin:auto;
-    overflow:hidden;
-    border-radius:50px;
-    margin-left: 40%;
-    float: left;
-}
-
 #header {
-	background-color:blue;
     height:calc(100vh - 75vh);
 }
 
@@ -18,20 +7,27 @@
 	line-height:50px;
 }
 
-#contenu  {
-	
-	background-color:red;
-    height:calc(100vh - 50vh);
+#header #titre {
+	width: 350px;
+	height: 150px;
+	 margin-left: 35%;
+     margin-right: auto;
+     float: left;
 }
 
-#contenu #img_arrondie {
+#header #img_arrondie {
 	width: 50px;
     height: 50px;
     margin:auto;
     overflow:hidden;
     border-radius:50px;
-    margin-left: 25%;
+    border:2px solid black;
+    margin-left: 40%;
     float: left;
+}
+
+#contenu  {
+    height:calc(100vh - 50vh);
 }
 
 #contenu ul li #img_arrondie {
@@ -47,15 +43,19 @@
 
    #contenu ul li {
    	line-height:20px;
+   	font-size: 20px;
+   	font-family: Arial ,sans-serif;
    }
 
 #contenu ul li:hover {
 	border:2px ridge black;
-	padding: 4px;
+	padding: 10px;
 	border-radius: 4px;
 	color: white;
-	background-color: grey;
-	margin-bottom: 10px;
+	background-color: #D3D3D3;
+	position: relative;
+	bottom: 3px;
+	cursor: pointer;
 }
 
 #contenu ul li:active {
@@ -63,16 +63,54 @@
 	padding: 3px;
 	border-radius: 3px;
 	color: white;
-	background-color: grey;
+	background-color: #D3D3D3;
 	margin-bottom: 10px;
+	cursor: pointer;
 }
 
 #contenu p {
 
-	font-weight: bold;
+	/*font-weight: bold;*/
+	font-style: normal;
+	font-family: 'Arial';
+	font-weight: 100px;
 	margin-left: 30%;
 	font-size: 34px;
 	line-height:50px;
+}
+
+ #img_arrondie {
+	width: 50px;
+    height: 50px;
+    margin:auto;
+    overflow:hidden;
+    border-radius:50px;
+    border:2px solid black;
+    margin-left: 25%;
+    float: left;
+}
+
+#footer {
+	 height:calc(100vh - 75vh);
+}
+
+#footer #logo_agogy {
+	width: 90px;
+    height: 90px;
+    display: block;
+    margin-left: 45%;
+ 
+    bottom: 0%;
+    float: left;
+}
+
+#footer #img_arrondie {
+	float: right;
+	margin-right: 2%;
+}
+
+label {
+	float: right;
 }
 
 ul {
@@ -81,7 +119,126 @@ ul {
 	font-size: 25px;
 }
 
-#footer {
-	 height:calc(100vh - 75vh);
-    background-color:yellow;
+/*jauge circulaire*/
+
+.progress-circle{
+  position: relative;             /* pour servir de référent */
+  box-sizing: border-box;         /* prise en compte bordure dans la dimension */
+  font-size: 6em;                 /* pour définir les dimensions */
+  width: 1em;                     /* fixe la largeur */
+  height: 1em;                    /* fixe la hauteur */
+  border-radius: 50%;             /* rendu aspect circulaire */
+  border: .15em solid #CDE;       /* couleur de fond de l'anneau */
+  background-color: #FAF0E6;         /* couleur de fond de la progress bar */
+  float: right;
 }
+
+.progress-masque {
+  position: absolute;
+  width: 1em;                     /* 100% de la largeur */
+  height: 1em;                    /* 100% de la hauteur */
+  left: -.15em;                   /* décalage de la largeur bordure de la gauge */
+  top: -.15em;                    /* décalage de la largeur bordure de la gauge */
+  clip: rect(0, 1em, 1em, .5em);  /* par défaut seule la partie droite est visible */*
+}
+
+.progress-barre,
+.progress-sup50 {
+  position: absolute;
+  box-sizing: border-box;         /* prise en compte bordure dans la dimension */
+  border-width: .15em;            /* largeur bordure de la gauge */
+  border-style: solid;
+  border-color: #FF8C00;
+  border-radius: 50%;             /* rendu aspect circulaire */
+  width: 1em;                     /* largeur à 100% */
+  height: 1em;                    /* hauteur à 100% */
+  clip: rect(0, .5em, 1em, 0);    /* on ne garde que la partie gauche */
+}
+
+.progress-sup50 {
+  display: none;
+  clip: rect(0, 1em, 1em, .5em);
+}
+.progress-circle:after {
+  content: attr(data-value) "%";  /* récup. valeur de progression */
+  font-size: 0.15em;              /* taille de la font en % du parent */
+  height: 100%;                   /* centrage dans le parent */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /*-- pour effet shadow intérieur --*/
+  border-radius: 50%;
+  box-shadow: 0 0 .5em rgba(0, 0, 0, .5) inset;
+}
+
+.progress-circle.grey {
+  color: #C0C0C0;
+  font-style: italic;
+}
+
+.progress-circle.thin,
+.progress-circle.thin .progress-barre,
+.progress-circle.thin .progress-sup50 {
+  border-width: .075em;           /* largeur bordure de la gauge */
+}
+.progress-circle.thin .progress-masque {
+  left: -.075em;                  /* largeur bordure gauge */
+  top: -.075em;                   /* largeur bordure gauge */
+}
+
+
+/*buttons du bas de la page*/
+
+#buttons {
+	margin-top:1%;
+	margin-left: 35%;
+	margin-bottom: 1%;
+}
+
+#buttons #b1  {
+	background-color:#77b55a;
+	border-radius:4px;
+	border:1px solid #4b8f29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:13px;
+	font-weight:bold;
+	padding:12px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #5b8a3c;
+	margin-right: 20px;
+}
+	#buttons #b1:hover {
+	background-color:#32CD32;
+}
+#buttons #b1:active {
+	position:relative;
+	top:1px;
+}
+
+#buttons #b2  {
+
+	background-color:#00BFFF;
+	border-radius:4px;
+	border:1px solid #1E90FF;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:13px;
+	font-weight:bold;
+	padding:12px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #5b8a3c;
+}
+	#buttons #b2:hover {
+	background-color:#00CED1;
+}
+#buttons #b2:active {
+	position:relative;
+	top:1px;
+}
+00FFFF
