--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@
 
 label {
 	float: right;
+	color: grey;
 }
 
 ul {
@@ -233,6 +234,9 @@ ul {
 	padding:12px 24px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #5b8a3c;
+  display: none;
+  float: right;
+  margin-right: 60%;
 }
 	#buttons #b2:hover {
 	background-color:#00CED1;
@@ -241,4 +245,19 @@ ul {
 	position:relative;
 	top:1px;
 }
-00FFFF
+
+#suivant {
+  display: none;
+}
+
+#suivant #img_arrondie:hover {
+  position:relative;
+  top:1px;
+  cursor: pointer;
+}
+
+#suivant #img_arrondie:active {
+  position:relative;
+  top:1px;
+  cursor: pointer;
+}
