--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,20 @@
 }
 
 #header p {
-	font-weight: bold;
-	line-height:50px;
+    font-weight: bold;
+    line-height:50px;
 }
 
 #header #titre {
-	width: 350px;
-	height: 150px;
-	margin-left: 35%;
+    width: 350px;
+    height: 150px;
+    margin-left: 35%;
   margin-right: auto;
   float: left;
 }
 
 #header #img_arrondie {
-	width: 50px;
+    width: 50px;
     height: 50px;
     margin:auto;
     overflow:hidden;
@@ -31,8 +31,13 @@
     margin-bottom: 10px;
 }
 
+#contenu_canvas {
+    display: flex;
+    /*flex-wrap: wrap-reverse;*/
+}
+
 #contenu ul li #img_arrondie {
-	width: 20px;
+    width: 20px;
     height: 20px;
     margin:auto;
     margin-right: 10px;
@@ -43,45 +48,45 @@
    }
 
    #contenu ul li {
-   	line-height:20px;
-   	font-size: 20px;
-   	font-family: Arial ,sans-serif;
+    line-height:20px;
+    font-size: 20px;
+    font-family: Arial ,sans-serif;
    }
 
 #contenu ul li:hover {
-	border:2px ridge black;
-	padding: 10px;
-	border-radius: 4px;
-	color: white;
-	background-color: #D3D3D3;
-	position: relative;
-	bottom: 3px;
-	cursor: pointer;
+    border:2px ridge black;
+    padding: 10px;
+    border-radius: 4px;
+    color: white;
+    background-color: #D3D3D3;
+    position: relative;
+    bottom: 3px;
+    cursor: pointer;
 }
 
 
 #contenu ul li:active {
-	border:2px ridge black;
-	padding: 3px;
-	border-radius: 3px;
-	color: white;
-	background-color: #D3D3D3;
-	cursor: pointer;
+    border:2px ridge black;
+    padding: 3px;
+    border-radius: 3px;
+    color: white;
+    background-color: #D3D3D3;
+    cursor: pointer;
 }
 
 #contenu p {
 
-	/*font-weight: bold;*/
-	font-style: normal;
-	font-family: 'Arial';
-	font-weight: 100px;
-	margin-left: 30%;
-	font-size: 34px;
-	line-height:50px;
+    /*font-weight: bold;*/
+    font-style: normal;
+    font-family: 'Arial';
+    font-weight: 100px;
+    margin-left: 30%;
+    font-size: 34px;
+    line-height:50px;
 }
 
  #img_arrondie {
-	width: 50px;
+    width: 50px;
     height: 50px;
     margin:auto;
     margin-bottom: 1px;
@@ -93,12 +98,12 @@
 }
 
 #footer {
-	 height:calc(100vh - 75vh);
+     height:calc(100vh - 75vh);
    clear: both;
 }
 
 #footer #logo_agogy {
-	width: 90px;
+    width: 90px;
     height: 90px;
     display: block;
     margin-left: 45%;
@@ -108,19 +113,19 @@
 }
 
 #footer #img_arrondie {
-	float: right;
-	margin-right: 2%;
+    float: right;
+    margin-right: 2%;
 }
 
 label {
-	float: right;
-	color: grey;
+    float: right;
+    color: grey;
 }
 
 ul {
-	list-style-type: none;
-	margin-left :30%;
-	font-size: 25px;
+    list-style-type: none;
+    /*margin-left :30%;*/
+    font-size: 25px;
 }
 
 /*jauge circulaire*/
@@ -214,60 +219,84 @@ ul {
 /*buttons du bas de la page*/
 
 #buttons {
-	/*margin-top:1%;*/
-	margin-left: 35%;
-	margin-bottom: 1%;
+    /*margin-top:1%;*/
+    margin-left: 35%;
+    margin-bottom: 1%;
 }
 
 #buttons #b1  {
-	background-color:#77b55a;
-	border-radius:4px;
-	border:1px solid #4b8f29;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:13px;
-	font-weight:bold;
-	padding:12px 24px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #5b8a3c;
-	margin-right: 20px;
+    background-color:#77b55a;
+    border-radius:4px;
+    border:1px solid #4b8f29;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:13px;
+    font-weight:bold;
+    padding:12px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #5b8a3c;
+    margin-right: 20px;
   margin-top: 10px;
 }
-	#buttons #b1:hover {
-	background-color:#32CD32;
+    #buttons #b1:hover {
+    background-color:#32CD32;
 }
 #buttons #b1:active {
-	position:relative;
-	top:1px;
+    position:relative;
+    top:1px;
+}
+
+#buttons #b_restore {
+    background-color:#FF8C00;
+    border-radius:4px;
+    border:1px solid #FFA500;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:13px;
+    font-weight:bold;
+    padding:12px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #5b8a3c;
+}
+
+ #buttons #b_restore:hover {
+    background-color:#FF4500;
+  }
+
+  #buttons #b_restore:active {
+    position:relative;
+    top:1px;
 }
 
 #buttons #b2  {
 
-	background-color:#00BFFF;
-	border-radius:4px;
-	border:1px solid #1E90FF;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:13px;
-	font-weight:bold;
-	padding:12px 24px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #5b8a3c;
+    background-color:#00BFFF;
+    border-radius:4px;
+    border:1px solid #1E90FF;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:13px;
+    font-weight:bold;
+    padding:12px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #5b8a3c;
   display: none;
   float: right;
   margin-right: 60%;
    margin-top: 10px;
 }
-	#buttons #b2:hover {
-	background-color:#00CED1;
+    #buttons #b2:hover {
+    background-color:#00CED1;
 }
 #buttons #b2:active {
-	position:relative;
-	top:1px;
+    position:relative;
+    top:1px;
 }
 
 #suivant {
@@ -284,4 +313,16 @@ ul {
   position:relative;
   top:1px;
   cursor: pointer;
+}
+
+
+
+/*Canvas*/
+#gauche_relies {
+  /*float: left;*/
+}
+
+#canvas {
+  border: 2px solid orange;
+  margin-left: 2%;
 }
