--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,8 @@
 
 #contenu_canvas {
     display: flex;
-    /*flex-wrap: wrap-reverse;*/
+    align-items: center;
+    justify-content: center;
 }
 
 #contenu ul li #img_arrondie {
@@ -47,11 +48,17 @@
     border:2px solid black;
    }
 
+
+   #contenu #questions {
+    margin-left: 30%;
+   }
+
    #contenu ul li {
     line-height:20px;
     font-size: 20px;
     font-family: Arial ,sans-serif;
    }
+
 
 #contenu ul li:hover {
     border:2px ridge black;
@@ -316,13 +323,15 @@ ul {
 }
 
 
-
 /*Canvas*/
+
 #gauche_relies {
-  /*float: left;*/
 }
 
 #canvas {
   border: 2px solid orange;
   margin-left: 2%;
+}
+
+#droite_relies {
 }
